--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,23 @@ code {
     monospace;
 }
 
+.locationImage {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: auto;
+  padding: 20px;
+}
+
 .placeCard {
-  
+  background-color: #f0f0f0;
+  border-radius: 15px;
+  margin: 10px;
+}
+
+.card-content {
+  text-align: center;
+  padding-bottom: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
