--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ code {
     monospace;
 }
 
-.locationImage {
+.location-image {
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -20,7 +20,7 @@ code {
   padding: 20px;
 }
 
-.placeCard {
+.place-card {
   background-color: #f0f0f0;
   border-radius: 15px;
   margin: 10px;
@@ -29,6 +29,10 @@ code {
 .card-content {
   text-align: center;
   padding-bottom: 20px;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 40px;
+  padding-right: 40px;
+}
+
+.outer-wrapper {
+  padding: 20px 60px
 }
